src/objects/zkmulti__MultiPackageShipment__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Billing_Account_Number__c</fullName>
        <label>Billing Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Clearance_Facility_Location_Id__c</fullName>
        <label>Clearance Facility Location Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Consolidation_Index__c</fullName>
        <label>Consolidation Index</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Consolidation_Type__c</fullName>
        <label>Consolidation Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Dimension_Units__c</fullName>
        <label>Dimension Units</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Dropoff_Type__c</fullName>
        <label>Dropoff Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Form_Id__c</fullName>
        <label>Form Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Label_Image_Type__c</fullName>
        <label>Label Image Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__MasterShipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipLabel>Consolidations</relationshipLabel>
        <relationshipName>Consolidations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Outbound_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outbound Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Outbound_Tracking_Stage__c</fullName>
        <label>Outbound Tracking Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Picked Up</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preference</label>
        <referenceTo>zkmulti__MCShipmate_Preference__c</referenceTo>
        <relationshipLabel>Consolidations</relationshipLabel>
        <relationshipName>Consolidations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consolidations</relationshipLabel>
        <relationshipName>Consolidations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Address_is_Residential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Address is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_City__c</fullName>
        <label>Recipient City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Company__c</fullName>
        <label>Recipient Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Consolidations</relationshipLabel>
        <relationshipName>Consolidations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Country__c</fullName>
        <label>Recipient Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Consolidations</relationshipLabel>
        <relationshipName>Consolidations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Consolidations</relationshipLabel>
        <relationshipName>Consolidations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Phone__c</fullName>
        <label>Recipient Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_State_Province__c</fullName>
        <label>Recipient State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Street__c</fullName>
        <label>Recipient Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Tax_ID_Type__c</fullName>
        <label>Recipient Tax ID Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Tax_ID__c</fullName>
        <label>Recipient Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Zip_Postal_Code__c</fullName>
        <label>Recipient Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Return_Tracking_Stage__c</fullName>
        <label>Return Tracking Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Picked Up</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Address_is_Residential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sender Address is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_City__c</fullName>
        <label>Sender City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Company__c</fullName>
        <label>Sender Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Country__c</fullName>
        <label>Sender Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Email__c</fullName>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Name__c</fullName>
        <label>Sender Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Phone__c</fullName>
        <label>Sender Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_State_Province__c</fullName>
        <label>Sender State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Street__c</fullName>
        <label>Sender Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Tax_ID_Type__c</fullName>
        <label>Sender Tax ID Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Tax_ID__c</fullName>
        <label>Sender Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Sender_Zip_Postal_Code__c</fullName>
        <label>Sender Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Total_Height__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Total_Length__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Total_Width__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Width</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Tracking_Id_Type__c</fullName>
        <label>Tracking Id Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Consolidation</label>
    <listViews>
        <fullName>zkmulti__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>zkmulti__Deleted__c</columns>
        <columns>zkmulti__Status__c</columns>
        <columns>zkmulti__Clearance_Facility_Location_Id__c</columns>
        <columns>zkmulti__Consolidation_Index__c</columns>
        <columns>zkmulti__Consolidation_Type__c</columns>
        <columns>zkmulti__Ship_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Consolidation-{0000}</displayFormat>
        <label>Consolidation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consolidations</pluralLabel>
    <recordTypes>
        <fullName>zkmulti__Consolidation</fullName>
        <active>true</active>
        <label>Consolidation</label>
    </recordTypes>
    <recordTypes>
        <fullName>zkmulti__MultiPackage</fullName>
        <active>true</active>
        <label>Multi Package</label>
    </recordTypes>
    <recordTypes>
        <fullName>zkmulti__Outbound_And_Return</fullName>
        <active>true</active>
        <label>Outbound And Return</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>